force-app/main/default/objects/Work_Item__c/Work_Item__c.object-meta.xml
<CustomObject>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WI-{0000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>