force-app/main/default/objects/Work_Item__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <label>Actual Hours</label>
    <summarizedField>Time_Entry__c.Hours__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Work_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>