force-app/main/default/objects/Work_Item__c/validationRules/Completed_Date_Requires_Done.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Date_Requires_Done</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Completed_Date__c)),
    NOT(ISPICKVAL(Status__c, "Done"))
)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Completed Date can only be set when Status is Done.</errorMessage>
</ValidationRule>