force-app/main/default/objects/Work_Item__c/listViews/All_Work_Items.listView-meta.xml
<ListView>
    <fullName>All_Work_Items</fullName>
    <label>All Work Items</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
</ListView>