force-app/main/default/objects/Work_Item__c/listViews/Blocked_Items.listView-meta.xml
<ListView>
    <fullName>Blocked_Items</fullName>
    <label>Blocked Items</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </filters>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Due_Date__c</columns>
</ListView>