force-app/main/default/objects/Work_Item__c/listViews/Due_Today.listView-meta.xml
<ListView>
    <fullName>Due_Today</fullName>
    <label>Due Today</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done</value>
    </filters>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
</ListView>